hphp/test/slow/parser/async_bad_tr.php.expectf

Fatal error: 'async' cannot be used on an abstract method. Use an Awaitable<...> return type instead. in %s/async_bad_tr.php on line 3
